--- a/Tyuiu.MenshikovEA.Sprint3.Task3.V28.Test/Tyuiu.MenshikovEA.Sprint3.Task3.V28.Test.csproj
+++ b/Tyuiu.MenshikovEA.Sprint3.Task3.V28.Test/Tyuiu.MenshikovEA.Sprint3.Task3.V28.Test.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E703D0CC-5538-480E-B3A4-E955DE3C9793}</ProjectGuid>
+    <ProjectGuid>{2DF1E510-175A-4CD7-980A-FC4697768767}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tyuiu.MenhikovEA.Sprint3.Task1.V13.Test</RootNamespace>
-    <AssemblyName>Tyuiu.MenhikovEA.Sprint3.Task1.V13.Test</AssemblyName>
+    <RootNamespace>Tyuiu.MenshikovEA.Sprint3.Task3.V28.Test</RootNamespace>
+    <AssemblyName>Tyuiu.MenshikovEA.Sprint3.Task3.V28.Test</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.MenhikovEA.Sprint3.Task1.V13.Lib\Tyuiu.MenhikovEA.Sprint3.Task1.V13.Lib.csproj">
-      <Project>{c0868b26-5d49-44af-acaa-ee1022b970b4}</Project>
-      <Name>Tyuiu.MenhikovEA.Sprint3.Task1.V13.Lib</Name>
+    <ProjectReference Include="..\Tyuiu.MenshikovEA.Sprint3.Task3.V28.Lib\Tyuiu.MenshikovEA.Sprint3.Task3.V28.Lib.csproj">
+      <Project>{d0a03a1e-705b-47a4-a9be-fd4f7d4df1c1}</Project>
+      <Name>Tyuiu.MenshikovEA.Sprint3.Task3.V28.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
